# tree_view_sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tree_view_spec.md
scripts/: hela_example_tracks.csv  load_data.py  open_plot.py
src/tree_view/: node_selection_list.py  tracks.py  tracks_from_df.py  tree_plot.py  tree_widget.py
src/tree_view/qt_widgets/: flip_axes_widget.py  navigation_widget.py  tree_view_feature_widget.py  tree_view_mode_widget.py
